--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "TODO": "data/nest.js",
   "name": "animated-time-series",
   "version": "0.1.0",
   "description": "an animated, paneled time series chart",
