--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "TODO": "draw and animate pie charts using tertiles of absolute change from baseline based on the interquartile range?",
+  "TODO": "add basic stratification via paneling",
   "name": "animated-time-series",
   "version": "0.1.0",
   "description": "an animated, paneled time series chart",
