--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "TODO": "continuous x-axis",
+  "TODO": "confidence intervals",
   "name": "animated-time-series",
   "version": "0.2.0",
   "description": "an animated, paneled time series chart",
@@ -40,7 +40,8 @@
   },
   "homepage": "https://github.com/samussiah/animated-time-series#readme",
   "dependencies": {
-    "d3": "^6.1.1"
+    "d3": "^6.1.1",
+    "jstat": "^1.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
